--- a/package.json
+++ b/package.json
@@ -80,4 +80,5 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
   }
+  "homepage": "https://anushadasari12.github.io/MirchiMarket/"
 }
